Added bootstrap, fixed layout and added some basic content.

--- a/public/index.html
+++ b/public/index.html
@@ -18,9 +18,16 @@
   <!-- Mobile viewport optimized: h5bp.com/viewport -->
   <meta name="viewport" content="width=device-width">
 
+
+
   <!-- Place favicon.ico and apple-touch-icon.png in the root directory: mathiasbynens.be/notes/touch-icons -->
 
   <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="css/bootstrap.min.css">
+  <link rel="stylesheet" href="css/bootstrap-responsive.min.css">
+
+    <!-- Fonts -->
+  <link href='http://fonts.googleapis.com/css?family=Ubuntu+Mono' rel='stylesheet' type='text/css'>
 
   <!-- More ideas for your <head> here: h5bp.com/d/head-Tips -->
 
@@ -33,15 +40,31 @@
   <!-- Prompt IE 6 users to install Chrome Frame. Remove this if you support IE 6.
        chromium.org/developers/how-tos/chrome-frame-getting-started -->
   <!--[if lt IE 7]><p class=chromeframe>Your browser is <em>ancient!</em> <a href="http://browsehappy.com/">Upgrade to a different browser</a> or <a href="http://www.google.com/chromeframe/?redirect=true">install Google Chrome Frame</a> to experience this site.</p><![endif]-->
-  <header>
-    <h1>aidanns.com</h1>
-  </header>
-  <div role="main">
+    
+    <div class="container">
 
-  </div>
-  <footer>
+      <div class="whitespace"></div>
 
-  </footer>
+      <div class="well">
+        <p> Hi there. </p>
+        <p> My name is Aidan Nagorcka-Smith, I'm a <a href="https://handbook.unimelb.edu.au/view/2011/%21H05-AA-SPC%2B1010"> software engineering </a> student and <a href="https://handbook.unimelb.edu.au/view/2012/SWEN20003">tutor</a> at <a href="http://unimelb.edu.au/">The University of Melbourne</a>. </p>
+        <p> At the moment I'm most interested in <a href="https://developer.apple.com/devcenter/ios/index.action">mobile</a> & <a href="http://www.ruby-lang.org/en/">w</a><a href="http://nodejs.org/">e</a><a href="http://www.heroku.com/">b</a> technology and the ways that it can be used in <a href="http://www.class-central.com/">education</a>. I want to make great products that make the world a better place. </p>
+        <p> In my spare time I love to listen to <a href="http://www.last.fm/user/aidanjns">music of all kinds</a>, play my <a href="http://www2.gibson.com/Products/Electric-Guitars/SG/Gibson-USA/SG-Standard.aspx">guitar</a> and run around to keep fit.
+        <p> Use the links below to get in touch. </p>
+      </div>
+
+      <div class="row">
+          <ul class="unstyled center-text">
+            <li class="span2 offset1"><a href="tel:+61412535563" id="phone">Phone</a></li>
+            <li class="span2"><a href="mailto:aidanns@gmail.com">Email</a></li>
+            <li class="span2"><a href="skype:aidanns?call">Skype</a></li>
+            <li class="span2"><a href="http://twitter.com/aidanns">Twitter</a></li>
+            <li class="span2"><a href="https://github.com/aidanns">Github</a></li>
+          </ul>
+      </div>
+
+      
+    </div>
 
 
   <!-- JavaScript at the bottom for fast page loading -->
