--- a/public/campuslifeapp.html
+++ b/public/campuslifeapp.html
@@ -47,7 +47,26 @@
 
         <h1>Campus Life</h1>
 
-       
+        <p>Campus Life is an iOS application that I developed as part of my final year software engineering project at The University of Melbourne in 2012. You'll be able to find it on the <a href="https://itunes.apple.com/us/app/campus-life/id570543246?ls=1&mt=8">app store</a> starting October 25, 2012.</p>
+
+        <p>The application is a crowdsourced directory of places and events of interest to the residents of the university's Parkville campus. It was conceived as a prototype to test the ways in which mobile computing can enhance the on-campus experience for the student body.</p>
+
+        <p>If you've tried the app, then I'd love to hear from you at <a href="mailto:campuslifeapp@gmail.com">campuslifeapp@gmail.com</a>.</p>
+
+        <hr />
+
+        <p>The project wouldn't have been possible without the help of:</p>
+        <ul>
+          <li><p><a href="http://ww2.cs.mu.oz.au/~shanika/">Shanika Karunasekera</a> and <a href="http://ww2.cs.mu.oz.au/~tmill/">Tim Miller</a>, my supervisors, for their guidance and patience.</p></li>
+          <li><p><a href="http://www.linkedin.com/pub/gordon-yau/16/962/130">Gordon Yau</a> and <a href="http://www.linkedin.com/pub/travis-cox/6/969/43">Travis Cox</a>, who acted as my clients.</p></li>
+          <li><p><a href="http://www.cshe.unimelb.edu.au/people/kennedy.html">Gregor Kennedy</a>, who provided the initial concept and offerred direction throughout the project.</p></li>
+          <li><p><a href="http://www.linkedin.com/pub/gavin-leys/2b/341/395">Gavin Leys</a>, who worked with me on design and asset creation.</p></li>
+          <li><p><a href="https://twitter.com/btawfic">Bilal Tawfic</a>, with whom I shared countless late-night code sessions and who solved more than a couple of my bugs.</p></li>
+          <li><p>And finally all my friends and family that made an effort to stay in touch despite my unhealthy aversion to daylight for weeks at a time.</p></li>
+
+        </ul>
+
+
       </div>
 
       
