--- a/public/index.html
+++ b/public/index.html
@@ -45,9 +45,9 @@
 
       <div class="well">
         <p> Hi there. </p>
-        <p> My name is Aidan Nagorcka-Smith, I'm a <a href="https://handbook.unimelb.edu.au/view/2011/%21H05-AA-SPC%2B1010"> software engineering </a> student, <a href="https://handbook.unimelb.edu.au/view/2012/SWEN20003">tutor</a> and <a href="https://launchpad.net/mugle">research assistant</a> at <a href="http://unimelb.edu.au/">The University of Melbourne</a>. </p>
+        <p> My name is Aidan Nagorcka-Smith, I'm a <a href="https://handbook.unimelb.edu.au/view/2011/%21H05-AA-SPC%2B1010"> software</a> <a href="/campuslifeapp">engineering </a> student, <a href="https://handbook.unimelb.edu.au/view/2012/SWEN20003">tutor</a> and <a href="https://launchpad.net/mugle">research assistant</a> at <a href="http://unimelb.edu.au/">The University of Melbourne</a>. </p>
         <p> At the moment I'm most interested in <a href="https://developer.apple.com/devcenter/ios/index.action">mobile</a> <a href="https://parse.com/">&amp;</a> <a href="http://www.ruby-lang.org/en/">w</a><a href="http://www.initializr.com/">e</a><a href="http://www.heroku.com/">b</a> technology and the ways that it can be used in <a href="http://www.class-central.com/">education</a>. I want to make great products that make the world a better place. </p>
-        <p> Right now I'm looking for an internship or two for 2013, if you're interested in hiring an aspiring software engineer for a few months then please have a look at my <a href="Resume.pdf">résumé</a>. </p>
+        <p> During 2013 I'll be interning at <a href="http://www.palantir.com/">Palantir</a> and <a href="http://www.google.com.au">Google</a> before returning to finish my degree. If you're interested in talking about opportunities to work together then please have a look at my <a href="Resume.pdf">résumé</a>. </p>
         <p> In my spare time I love to listen to <a href="http://www.last.fm/user/aidanjns">music of all kinds</a>, play my <a href="http://www2.gibson.com/Products/Electric-Guitars/SG/Gibson-USA/SG-Standard.aspx">guitar</a> and run around to keep fit.
         <p> Use the links below to get in touch. </p>
       </div>
