Fixed slight wording typo in campus life page.

--- a/public/campuslifeapp.html
+++ b/public/campuslifeapp.html
@@ -57,7 +57,7 @@
 
         <p>The project wouldn't have been possible without the help of:</p>
         <ul>
-          <li><p><a href="http://ww2.cs.mu.oz.au/~shanika/">Shanika Karunasekera</a> and <a href="http://ww2.cs.mu.oz.au/~tmill/">Tim Miller</a>, my supervisors, for their guidance and patience.</p></li>
+          <li><p><a href="http://ww2.cs.mu.oz.au/~shanika/">Shanika Karunasekera</a> and <a href="http://ww2.cs.mu.oz.au/~tmill/">Tim Miller</a>, my supervisors, with their guidance and patience.</p></li>
           <li><p><a href="http://www.linkedin.com/pub/gordon-yau/16/962/130">Gordon Yau</a> and <a href="http://www.linkedin.com/pub/travis-cox/6/969/43">Travis Cox</a>, who acted as my clients.</p></li>
           <li><p><a href="http://www.cshe.unimelb.edu.au/people/kennedy.html">Gregor Kennedy</a>, who provided the initial concept and offerred direction throughout the project.</p></li>
           <li><p><a href="http://www.linkedin.com/pub/gavin-leys/2b/341/395">Gavin Leys</a>, who worked with me on design and asset creation.</p></li>
